did flashcard renaming, fixed bug with not showing recording feedback, and bad grading mode with netProF
Former-commit-id: 6833b0082f51d290ffd0811b26d46393ab51578f [formerly 55692cf96703cc45e3d28ad5e96abde32a5e186e] [formerly d313c30034923c8c6f2cc2f0600281fc6d2a42b4 [formerly f107c1004776d69296ef8a07e83c6c748f17a3a1]] [formerly f876ca1025d82647fa679a12a0b9ee902d4003d5]
Former-commit-id: 60aa27c6ada358552cafdadac28ccaf8a61c6995
Former-commit-id: c1c02199b13cc138e4300cf96fbf56931ee1a3f1 [formerly 48be0e82fdc16855d20bea9e65c95d30ba257ae0]
Former-commit-id: c08e66d56364dc115f6fd4fbc4947548a6c16747

--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -292,6 +292,10 @@ fieldset {
     margin-left: 15%;
 }
 
+.topMargin {
+    margin-top: 10px;
+}
+
 .leftFiveMargin {
     margin-left: 5px;
 }
